# CommandHand

./: .gitignore  CMakeLists.txt  CommandHand.h  Coordinates.cpp  Coordinates.h  CursorControl.cpp  CursorControl.h  Drawer.cpp  Drawer.h  Gesture.cpp  Gesture.h  GestureRecognition.cpp  GestureRecognition.h  Header.h  Makefile  Makefile2  MyGUI.cpp  MyGUI.h  MyVideo.cpp  MyVideo.h  QtGUI.cpp  QtGUI.ui  README.md  README.txt  blur_debug.cpp  blur_debug.h  camera.cpp  closed_hand_contour.hand  main.cpp  mapping.cpp  mapping.h  open_hand_contour.hand  qtgui.h  rgb_debug.cpp  rgb_debug.h  thresh_debug.cpp  thresh_debug.h
Command Hand/: Command Hand.sln
Command Hand/Command Hand/: Command Hand.vcxproj  Command Hand.vcxproj.filters  Header.h  Sample.cpp  pa3.h
Command Hand/Documentation/: Installation in Windows — OpenCV 3.0.0-dev documentation.html
OpenCV useful docs/: (34) Setting Up OpenCV in Visual Studio - YouTube.html  Camera — OpenCV 3.0.0-dev documentation.html  Gesture Recognition - OpenCV.HTML  How can I install_configure OpenCV3.2.0 with C++, Visual Studio 2017_ - Stack Overflow.html  Reading and Writing Video — OpenCV 3.0.0-dev documentation.html  tutorial links for installing opencv.txt
OpenCV useful docs/(34) Setting Up OpenCV in Visual Studio - YouTube_files/: captions.js.download  endscreen.js.download  remote.js.download
OpenCV useful docs/How can I install_configure OpenCV3.2.0 with C++, Visual Studio 2017_ - Stack Overflow_files/: B20911639.html  container.html  dcmads.js.download  dtc  full-anon.en.js.download  gpt.js.download  integrator.js.download  markup.js.download  post-validation.en.js.download  saved_resource(1).html  saved_resource(3).html  saved_resource.html  stub.en.js.download
OpenCV useful docs/INSTALLING OPENCV WITH VISUAL STUDIO/: OpenCV_ How to build applications with OpenCV inside the _Microsoft Visual Studio_.html
QtGui/QtGui/: QtGui.pri  QtGui.pro
error logging/: pcberror.txt
(+28 files in other folders)
